优化改进：jdk切换为21，springboot切换为3，API接口风格切换为短横线，缓存切换为Caffeine，权限切换为spring-security，日志切换为Logback等